최다득표수 사진이름과 이미지 출력

--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -10,7 +10,28 @@
     tools:context=".ResultActivity">
 
     <TableRow
+        android:layout_marginBottom="5dp">
+        <TextView
+            android:id="@+id/text_title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:textSize="20sp"
+            android:layout_span="2"
+            android:text="최다 득표한 사진 이름"/>
+    </TableRow>
+
+    <TableRow
         android:layout_marginBottom="15dp">
+        <ImageView
+            android:id="@+id/imgv"
+            android:layout_width="300dp"
+            android:layout_height="350dp"
+            android:layout_span="2"/>
+    </TableRow>
+
+    <TableRow
+        android:layout_marginBottom="5dp">
         <TextView
             android:id="@+id/text01"
             android:layout_width="match_parent"
@@ -22,12 +43,12 @@
             android:id="@+id/rb1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            style="?android:attr/ratingBarStyleIndicator"
+            style="?android:attr/ratingBarStyleSmall"
             android:layout_gravity="right"/>
     </TableRow>
 
     <TableRow
-        android:layout_marginBottom="15dp">
+        android:layout_marginBottom="5dp">
         <TextView
             android:id="@+id/text02"
             android:layout_width="match_parent"
@@ -39,12 +60,12 @@
             android:id="@+id/rb2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            style="?android:attr/ratingBarStyleIndicator"
+            style="?android:attr/ratingBarStyleSmall"
             android:layout_gravity="right"/>
     </TableRow>
 
     <TableRow
-        android:layout_marginBottom="15dp">
+        android:layout_marginBottom="5dp">
         <TextView
             android:id="@+id/text03"
             android:layout_width="match_parent"
@@ -56,12 +77,12 @@
             android:id="@+id/rb3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            style="?android:attr/ratingBarStyleIndicator"
+            style="?android:attr/ratingBarStyleSmall"
             android:layout_gravity="right"/>
     </TableRow>
 
     <TableRow
-        android:layout_marginBottom="15dp">
+        android:layout_marginBottom="5dp">
         <TextView
             android:id="@+id/text04"
             android:layout_width="match_parent"
@@ -73,12 +94,12 @@
             android:id="@+id/rb4"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            style="?android:attr/ratingBarStyleIndicator"
+            style="?android:attr/ratingBarStyleSmall"
             android:layout_gravity="right"/>
     </TableRow>
 
     <TableRow
-        android:layout_marginBottom="15dp">
+        android:layout_marginBottom="5dp">
         <TextView
             android:id="@+id/text05"
             android:layout_width="match_parent"
@@ -90,12 +111,12 @@
             android:id="@+id/rb5"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            style="?android:attr/ratingBarStyleIndicator"
+            style="?android:attr/ratingBarStyleSmall"
             android:layout_gravity="right"/>
     </TableRow>
 
     <TableRow
-        android:layout_marginBottom="15dp">
+        android:layout_marginBottom="5dp">
         <TextView
             android:id="@+id/text06"
             android:layout_width="match_parent"
@@ -107,12 +128,12 @@
             android:id="@+id/rb6"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            style="?android:attr/ratingBarStyleIndicator"
+            style="?android:attr/ratingBarStyleSmall"
             android:layout_gravity="right"/>
     </TableRow>
 
     <TableRow
-        android:layout_marginBottom="15dp">
+        android:layout_marginBottom="5dp">
         <TextView
             android:id="@+id/text07"
             android:layout_width="match_parent"
@@ -124,12 +145,12 @@
             android:id="@+id/rb7"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            style="?android:attr/ratingBarStyleIndicator"
+            style="?android:attr/ratingBarStyleSmall"
             android:layout_gravity="right"/>
     </TableRow>
 
     <TableRow
-        android:layout_marginBottom="15dp">
+        android:layout_marginBottom="5dp">
         <TextView
             android:id="@+id/text08"
             android:layout_width="match_parent"
@@ -141,12 +162,12 @@
             android:id="@+id/rb8"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            style="?android:attr/ratingBarStyleIndicator"
+            style="?android:attr/ratingBarStyleSmall"
             android:layout_gravity="right"/>
     </TableRow>
 
     <TableRow
-        android:layout_marginBottom="15dp">
+        android:layout_marginBottom="5dp">
         <TextView
             android:id="@+id/text09"
             android:layout_width="match_parent"
@@ -158,12 +179,12 @@
             android:id="@+id/rb9"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            style="?android:attr/ratingBarStyleIndicator"
+            style="?android:attr/ratingBarStyleSmall"
             android:layout_gravity="right"/>
     </TableRow>
 
     <TableRow
-        android:layout_marginBottom="15dp">
+        android:layout_marginBottom="5dp">
         <Button
             android:id="@+id/btn_home"
             android:layout_span="2"
